# libini

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  config.h.in  configure.ac  iniparser.c  iniparser.h  libini.c
tests/: .gitignore  Makefile.am  check_iniparser.c  check_iniparser.ini
